--- a/static/css/style.css
+++ b/static/css/style.css
@@ -409,7 +409,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: calc(100vh - 110px);
-  background: url("") top center;
+  background: url("../img/hero-bg.jpg");
   background-size: cover;
   position: relative;
 }
