--- a/templates/portfolio-details.html
+++ b/templates/portfolio-details.html
@@ -10,26 +10,25 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="static\assets\img\favicon.png" rel="icon">
+  <link href="static\assets\img\apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='css/style.css') }}">
 
   <!-- Vendor CSS Files -->
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="static\assets\vendor\aos\aos.css" rel="stylesheet">
+  <link href="static\assets\vendor\bootstrap\css\bootstrap-grid.min.css" rel="stylesheet">
+  <link href="static\assets\vendor\bootstrap-icons\bootstrap-icons.css" rel="stylesheet">
+  <link href="static\assets\vendor\boxicons\css\boxicons.min.css" rel="stylesheet">
+  <link href="static\assets\vendor\glightbox\css\glightbox.min.css" rel="stylesheet">
+  <link href="static\assets\vendor\swiper\swiper-bundle.min.css" rel="stylesheet">
 
 
   <!-- Template Main CSS File -->
-  <link href="assets/css/style.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='css/style.css') }}">
 
   <!-- =======================================================
   * Template Name: Day - v4.0.1
@@ -250,12 +249,12 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
     crossorigin="anonymous"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="static\assets\vendor\aos\aos.js"></script>
+  <script src="static\assets\vendor\bootstrap\js\bootstrap.bundle.min.js"></script>
+  <script src="static\assets\vendor\glightbox\js\glightbox.min.js"></script>
+  <script src="static\assets\vendor\isotope-layout\isotope.pkgd.min.js"></script>
+  <script src="static\assets\vendor\php-email-form\validate.js"></script>
+  <script src="static\assets\vendor\swiper\swiper-bundle.min.js"></script>
 
   <!-- Template Main JS File -->
   <script src="{{ url_for('static', filename='js/main.js') }}"></script>
