--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Day Bootstrap Template - Index</title>
+  <title>Baring Faang</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -46,14 +46,6 @@
   <section id="topbar" class="d-flex align-items-center">
     <div class="container d-flex justify-content-center justify-content-md-between">
       <div class="contact-info d-flex align-items-center">
-        <i class="bi bi-envelope-fill"></i><a href="mailto:contact@example.com">info@example.com</a>
-        <i class="bi bi-phone-fill phone-icon"></i> +1 5589 55488 55
-      </div>
-      <div class="social-links d-none d-md-block">
-        <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
       </div>
     </div>
   </section>
@@ -62,15 +54,16 @@
   <header id="header" class="d-flex align-items-center">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="index.html">Day</a></h1>
+      <h1 class="logo"><a href="index.html"></a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
-      <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
+      <a href="index.html" class="logo"><img src="BaringFang\static\assets\img\faang image.jpg" alt=""
+          class="img-fluid"></a>
 
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="#about">About</a></li>
-          <li><a class="nav-link scrollto" href="#services">Services</a></li>
+          <li><a class="nav-link scrollto" href="#about">The Goal</a></li>
+          <li><a class="nav-link scrollto" href="#services">The Companies</a></li>
           <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
           <li><a class="nav-link scrollto" href="#pricing">Pricing</a></li>
           <li><a class="nav-link scrollto" href="#team">Team</a></li>
@@ -102,9 +95,9 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex align-items-center">
     <div class="container position-relative" data-aos="fade-up" data-aos-delay="500">
-      <h1>Welcome to Day</h1>
-      <h2>We are team of talented designers making websites with Bootstrap</h2>
-      <a href="#about" class="btn-get-started scrollto">Get Started</a>
+      <h1>Welcome to BaringFaang</h1>
+      <h2>A deep dive into the analtytics of 6 of the World's Biggest Tech Companies</h2>
+      <a href="#about" class="btn-get-started scrollto">Let's Get Started</a>
     </div>
   </section><!-- End Hero -->
 
@@ -116,10 +109,10 @@
 
         <div class="row">
           <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-left">
-            <img src="static\assets\img\about.jpg" class="img-fluid" alt="">
+            <img src="static\assets\img\faang.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right">
-            <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
+            <h3>Our Goals into this Data Dive</h3>
             <p class="font-italic">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
               dolore
@@ -187,27 +180,29 @@
         <div class="row d-flex align-items-center">
 
           <div class="col-lg-2 col-md-4 col-6">
-            <img src="static\assets\img\clients\client-1.png" class="img-fluid" alt="">
+            <img src="static\assets\img\clients\amazon.png" class="img-fluid" alt="">
+            <a href="https://www.facebook.com"></a>
+
           </div>
 
           <div class="col-lg-2 col-md-4 col-6">
-            <img src="static\assets\img\clients\client-2.png" class="img-fluid" alt="">
+            <img src="static\assets\img\clients\apple.png" class="img-fluid" alt="">
           </div>
 
           <div class="col-lg-2 col-md-4 col-6">
-            <img src="static\assets\img\clients\client-3.png" class="img-fluid" alt="">
+            <img src="static\assets\img\clients\facebook.png" class="img-fluid" alt="">
           </div>
 
           <div class="col-lg-2 col-md-4 col-6">
-            <img src="static\assets\img\clients\client-4.png" class="img-fluid" alt="">
+            <img src="static\assets\img\clients\google.png" class="img-fluid" alt="">
           </div>
 
           <div class="col-lg-2 col-md-4 col-6">
-            <img src="static\assets\img\clients\client-5.png" class="img-fluid" alt="">
+            <img src="static\assets\img\clients\microsoft.png" class="img-fluid" alt="">
           </div>
 
           <div class="col-lg-2 col-md-4 col-6">
-            <img src="static\assets\img\clients\client-6.png" class="img-fluid" alt="">
+            <img src="static\assets\img\clients\netflix.png" class="img-fluid" alt="">
           </div>
 
         </div>
@@ -220,8 +215,8 @@
       <div class="container">
 
         <div class="section-title">
-          <span>Services</span>
-          <h2>Services</h2>
+          <span>Introduction</span>
+          <h2>Meet The Companies</h2>
           <p>Sit sint consectetur velit quisquam cupiditate impedit suscipit alias</p>
         </div>
 
@@ -539,6 +534,7 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in">
             <div class="member">
+              <div id=svg-area></div>
               <img src="assets/img/team/team-3.jpg" alt="">
               <h4>William Anderson</h4>
               <span>CTO</span>
@@ -727,6 +723,7 @@
   <!-- Template Main JS File -->
   <script src="static\assets\js\main.js"></script>
   <script src="{{ url_for('static', filename='js/main.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/employees.js') }}"></script>
 
 </body>
 
