--- a/templates/index.html
+++ b/templates/index.html
@@ -48,6 +48,8 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
+
+  <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
 </head>
 
 <body>
@@ -80,13 +82,17 @@
           <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
+              <li class="dropdown"><a href="#"><span>Job Oppertunities</span> <i class="bi bi-chevron-right"></i></a>
                 <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
+                  <li><a href="https://www.amazon.jobs/en/" target="_blank">Amazon</a></li>
+                  <li><a href="https://www.apple.com/jobs/ca/" target="_blank">Apple</a></li>
+                  <li><a href="https://www.facebook.com/careers/jobs/" target="_blank">Facebook</a></li>
+                  <li><a
+                      href="https://careers.google.com/jobs/results/?company=Google&company=Google%20Fiber&company=YouTube&employment_type=FULL_TIME&gclid=CjwKCAjwgOGCBhAlEiwA7FUXkgy60OG1JfoSlOLTvuRGa-zke9LBGVOsFRuTMR6rkgnZNIA8rGi7NRoCCp8QAvD_BwE&gclsrc=aw.ds&hl=en_US&jlo=en_US&location=Canada&q=&sort_by=relevance&src=Online%2FHouse%20Ads%2FBKWS"
+                      target="_blank">Google</a>
+                  </li>
+                  <li><a href="https://careers.microsoft.com/us/en" target="_blank">Microsoft</a></li>
+                  <li><a href="https://jobs.netflix.com/" target="_blank">Netflix</a></li>
                 </ul>
               </li>
               <li><a href="#">Drop Down 2</a></li>
@@ -124,16 +130,15 @@
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right">
             <h3>Our Goals into this Data Dive</h3>
             <p class="font-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore
-              magna aliqua.
+              A Project that compares statsical data between 6 of the bigget Tech Companies. Seeing as it is unfair to
+              compare these companies that specialize in different fields strictly by "the biggest number" we will
+              analyze growth under the follwoing categories:
             </p>
             <ul>
-              <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-              <li><i class="bi bi-check-circle"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-              <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla
-                pariatur.</li>
+              <li><i class="bi bi-check-circle"></i> Offices to employees ratio</li>
+              <li><i class="bi bi-check-circle"></i> Revenue growth rates.</li>
+              <li><i class="bi bi-check-circle"></i> the flunctuation of stock prices.</li>
+              <li><i class="bi bi-check-circle"></i> And Current Number of job oppertunites available</li>
             </ul>
             <p>
               Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
@@ -227,57 +232,86 @@
         <div class="section-title">
           <span>Introduction</span>
           <h2>Meet The Companies</h2>
-          <p>Sit sint consectetur velit quisquam cupiditate impedit suscipit alias</p>
+          <p>A Small Introduction to the above Tech Companies</p>
         </div>
 
         <div class="row">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up">
             <div class="icon-box">
-              <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4><a href="">Lorem Ipsum</a></h4>
-              <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+              <div class="icon"><i class="bi-earbuds"></i></div>
+              <h4><a href="">Apple</a></h4>
+              <p><b>Founded: </b> April 1, 1976. <b>Mission Statement: </b>"To bring the best personal computing
+                products
+                and
+                support to students, educators, designers, scientists, engineers, businessperson and consumers in over
+                140 countries across the world" <b>Current Number of Employees: </b>147000 <b>Current Number of Offices:
+                </b> 26
+              </p>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="fade-up"
             data-aos-delay="150">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-file"></i></div>
-              <h4><a href="">Sed ut perspiciatis</a></h4>
-              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+              <div class="icon"><i class="bi-reply-fill"></i></div>
+              <h4><a href="">Amazon</a></h4>
+              <p><b>Founded: </b> July 5, 1994 <b>Mission Statement: </b>"To serve consumers through online and physical
+                stores and focus on selection, price and convenience" <b>Current Number of Employees: </b>1298000
+                <b>Current Number of Offices:
+                </b> 233
+              </p>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="fade-up"
             data-aos-delay="300">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4><a href="">Magni Dolores</a></h4>
-              <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+              <div class="icon"><i class="bi-facebook"></i></div>
+              <h4><a href="">Facebook</a></h4>
+              <p><b>Founded: </b> founded 2003, was originally founded for Harvard students but went live to the public
+                since 2006. <b>Mission Statement: </b>"To give people the power to build community and bring the world
+                closer together. That reflects that we can't do this by ourselves, but only by empowering people to
+                build communities and bring people together. Our lives are all connected." <b>Current Number of
+                  Employees: </b>58604
+                <b>Current Number of Offices:
+                </b> 85
+              </p>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="fade-up" data-aos-delay="450">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-world"></i></div>
-              <h4><a href="">Nemo Enim</a></h4>
-              <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+              <div class="icon"><i class="bi-google"></i></div>
+              <h4><a href="">Google</a></h4>
+              <p><b>Founded: </b> September 4, 1998 <b>Mission Statement: </b>"To organize the world's information and
+                make it universally accessible and useful." <b>Current Number of Employees: </b>235301
+                <b>Current Number of Offices:
+                </b> 85
+              </p>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="fade-up" data-aos-delay="600">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-slideshow"></i></div>
-              <h4><a href="">Dele cardo</a></h4>
-              <p>Quis consequatur saepe eligendi voluptatem consequatur dolor consequuntur</p>
+              <div class="icon"><i class="bi-grid-fill"></i></div>
+              <h4><a href="">Microsoft</a></h4>
+              <p><b>Founded: </b> April 4, 1975 <b>Mission Statement: </b>"To empower every person and every
+                organization on the planet to achieve more" <b>Current Number of Employees: </b>163000
+                <b>Current Number of Offices:
+                </b> 177
+              </p>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="fade-up" data-aos-delay="750">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-arch"></i></div>
-              <h4><a href="">Divera don</a></h4>
-              <p>Modi nostrum vel laborum. Porro fugit error sit minus sapiente sit aspernatur</p>
+              <div class="icon"><i class="bi-caret-right-square-fill"></i></div>
+              <h4><a href="">Netflix</a></h4>
+              <p><b>Founded: </b> August 29, 1997 <b>Mission Statement: </b>"To entertain the world" <b>Current Number
+                  of Employees: </b>9400
+                <b>Current Number of Offices:
+                </b> 14
+              </p>
             </div>
           </div>
 
@@ -429,7 +463,71 @@
     </section><!-- End Portfolio Section -->
 
     <!-- ======= Pricing Section ======= -->
-    <div id="map-id"></div>
+    <section id="pricing" class="pricing">
+      <div class="container">
+
+        <div class="section-title">
+          <span>Pricing</span>
+          <h2>Pricing</h2>
+          <p>Sit sint consectetur velit quisquam cupiditate impedit suscipit alias</p>
+        </div>
+
+        <div class="row">
+
+          <div class="col-lg-4 col-md-6" data-aos="zoom-in" data-aos-delay="150">
+            <div class="box">
+              <h3>Free</h3>
+              <h4><sup>$</sup>0<span> / month</span></h4>
+              <ul>
+                <li>Aida dere</li>
+                <li>Nec feugiat nisl</li>
+                <li>Nulla at volutpat dola</li>
+                <li class="na">Pharetra massa</li>
+                <li class="na">Massa ultricies mi</li>
+              </ul>
+              <div class="btn-wrap">
+                <a href="#" class="btn-buy">Buy Now</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 mt-4 mt-md-0" data-aos="zoom-in">
+            <div class="box featured">
+              <h3>Business</h3>
+              <h4><sup>$</sup>19<span> / month</span></h4>
+              <ul>
+                <li>Aida dere</li>
+                <li>Nec feugiat nisl</li>
+                <li>Nulla at volutpat dola</li>
+                <li>Pharetra massa</li>
+                <li class="na">Massa ultricies mi</li>
+              </ul>
+              <div class="btn-wrap">
+                <a href="#" class="btn-buy">Buy Now</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="150">
+            <div class="box">
+              <h3>Developer</h3>
+              <h4><sup>$</sup>29<span> / month</span></h4>
+              <ul>
+                <li>Aida dere</li>
+                <li>Nec feugiat nisl</li>
+                <li>Nulla at volutpat dola</li>
+                <li>Pharetra massa</li>
+                <li>Massa ultricies mi</li>
+              </ul>
+              <div class="btn-wrap">
+                <a href="#" class="btn-buy">Buy Now</a>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
     </section><!-- End Pricing Section -->
 
     <!-- ======= Team Section ======= -->
@@ -687,6 +785,8 @@
 
   <!-- API key -->
   <script type="text/javascript" src="static/js/config.js"></script>
+
+  <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
 
   <!-- Template Main JS File -->
   <script src="static\assets\js\main.js"></script>
